<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/app_label">
        <menu>
            <item
                android:id="@+id/action_share_content"
                android:icon="@drawable/ic_share_grey600_48dp"
                android:title="@string/share_items"/>
            <item
                android:id="@+id/actions_reminder"
                android:icon="@drawable/ic_notifications_grey600_48dp"
                android:title="@string/set_reminder"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_tune_grey600_48dp"
                android:title="@string/action_settings"/>
        </menu>
    </item>
    <item android:title="@string/others_label">
        <menu>
            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_thumb_up_black_48dp"
                android:title="@string/rate_app"/>

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_grey600_48dp"
                android:title="@string/share_app_label"/>
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_live_help_grey600_48dp"
                android:title="@string/help"/>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_help_grey600_48dp"
                android:title="@string/about_label"/>
            <item
                android:id="@+id/actions_exit"
                android:icon="@drawable/ic_exit_to_app_black_48dp"
                android:title="Exit"/>
        </menu>
    </item>
</menu>
